flux/infrastructure/tdarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tdarr
  labels:
    name: tdarr
