flux/infrastructure/tdarr/tdarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: tdarr
  labels:
    app: tdarr
spec:
  selector:
    app: tdarr
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
