flux/infrastructure/tdarr/tdarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr
  namespace: tdarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tdarr.becklab.cloud`)
      middlewares:
        - name: sso-admin-chain
          namespace: identity
      services:
        - name: tdarr
          port: 8080
  tls:
    secretName: tdarr-tls
